--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.epiwo.front">
+    package="com.epiwo.front" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_launch_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ingeniero"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true" >
+        <activity
+            android:name=".AddMeetingActivity"
+            android:exported="true" />
         <activity
             android:name=".MainPage"
             android:label="@string/title_activity_meetings"
-            android:theme="@style/Theme.Ingeniero.NoActionBar"></activity>
-        <activity android:name=".MainActivity">
+            android:theme="@style/Theme.Ingeniero.NoActionBar" />
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
